# playground-enigma2-player

./: AGENTS.md  Cargo.toml  Makefile  README.md  build.rs
.github/workflows/: nightly-release.yml
data/: local.enigma2-player.desktop
scripts/: check-deps.sh
src/: lib.rs  main.rs
src/app/: desktop.rs  main.rs  mod.rs
src/common/player/: icons.rs  mod.rs  render.rs  session.rs  stream_settings.rs  style.rs  window_chrome.rs
src/enigma2/: api.rs  mod.rs  model.rs  urls.rs
src/settings/: store.rs  window.rs
src/ui/: channel_overlay.rs  epg_overlay.rs  mod.rs  single_player.rs
tests/: app.rs  channel_overlay.rs  enigma2.rs  epg_overlay.rs  player_stream_settings.rs  settings.rs
tests/enigma2/api/: bouquet_with_epg.rs  bouquets.rs  missing_settings.rs  mod.rs  resolve_stream_url.rs  service_epg.rs
tests/enigma2/model/: attach_epg.rs  deserialize.rs  epg_event_description.rs  epg_event_progress.rs  mod.rs
tests/enigma2/urls/: epg_now_url.rs  epg_service_url.rs  extract_stream_url.rs  mod.rs  normalize_base_url.rs  stream_m3u_url.rs
tests/settings/store/: load.rs  mod.rs  save.rs  validate_box_url.rs
tests/support/: mod.rs
