[package]
name = "enigma2-player"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
name = "enigma2_player_core"
path = "src/lib.rs"

[[bin]]
name = "enigma2-player"
path = "src/main.rs"

[dependencies]
gio = "0.22.6"
glib = "0.22.7"
gtk = { package = "gtk4", version = "0.11.3", features = ["v4_6"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
ureq = { version = "3.3.0", default-features = false }
url = "2.5.8"

[profile.release]
strip = "symbols"
